# internal/api/grpc/update_time.go
@@ -17,13 +17,17 @@ func (i Implementation) UpdateTime(ctx context.Context, request *types2.UpdateTi
 		scheduler = apiCtx.Scheduler(ctx)
 		tssConfig = apiCtx.TSSConfig(ctx)
 	)
-	t := time.Unix(request.Timestamp, 0).UTC()
-	timeTarget := time.Now().UTC().Add(time.Second * common.DefaultExecutionTime)
-	if t.Before(timeTarget) {
-		return nil, status.Error(codes.FailedPrecondition, "time target is in the future")
+	timeStart := time.Unix(request.StartTime, 0).Local()
+	timeTarget := time.Unix(request.TargetTime, 0).Local().Add(time.Second * common.DefaultExecutionTime)
+	if timeStart.After(timeTarget) {
+		return nil, status.Error(codes.FailedPrecondition, "time target is too early")
+	}
+	if timeStart.Before(time.Now().UTC()) {
+		return nil, status.Error(codes.FailedPrecondition, "time start is before time.Now()")
 	}
 	task := timechanger.NewTask(tssConfig)
-	task.StartTime = t
-	scheduler.ScheduleTask(ctx, task)
-	return common.ToUpdateTimeResponse(false), nil
+	task.StartTime = timeStart
+	task.TargetTime = timeTarget
+	scheduler.ScheduleTask(context.WithoutCancel(ctx), task)
+	return common.ToUpdateTimeResponse(true), nil
 }
